--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,16 +34,12 @@ dependencies:
   fluttertoast: null
   http: ^0.13.4
   intl: ^0.17.0
-  provider: ^4.3.2
+  path_provider: ^2.0.15
+  pdf: ^3.10.4
+  printing: ^5.11.0
   shared_preferences: ^2.1.2
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
