--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
     package="com.example.aplikasi_keuangan">
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
    <application
-        android:label="aplikasi_keuangan"
+        android:label="ApKeu"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/apkeu">
         <activity
             android:name=".MainActivity"
             android:exported="true"
